# oop.lab2

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
GoogleTests/: CMakeLists.txt
controller/: controller.cpp  controller.h
model/Deltoida/: Deltoida.cpp  Deltoida.h
tests/: tests.cpp
view/: view.cpp  view.h
